# volume-manager

./: Cargo.toml
.github/workflows/: test-and-release.yml
aws-volume-mounter/: Cargo.toml
aws-volume-mounter/src/: command.rs  main.rs
aws-volume-provisioner/: Cargo.toml
aws-volume-provisioner-installer/: Cargo.toml  README.md
aws-volume-provisioner-installer/examples/: download.rs
aws-volume-provisioner-installer/src/: github.rs  s3.rs
aws-volume-provisioner/src/: command.rs  main.rs
scripts/: build.release.sh
