[package]
name = "aws-volume-provisioner-installer"
version = "0.0.97" # https://github.com/ava-labs/volume-manager/releases
edition = "2021"
rust-version = "1.69"
publish = true
description = "aws-volume-provisioner installer"
repository = "https://github.com/ava-labs/volume-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
log = "0.4.17"
random-manager = "0.0.5"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96" # https://github.com/serde-rs/json
tokio = { version = "1.27.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
