[package]
name = "aws-volume-provisioner"
version = "0.0.32" # https://github.com/gyuho/volume-manager/releases
edition = "2021"
rust-version = "1.66"
description = "AWS volume provisioner"
repository = "https://github.com/gyuho/volume-manager"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "aws-volume-provisioner"
path = "src/main.rs"

[dependencies]
aws-manager = "0.22.4" # https://crates.io/crates/aws-manager/versions
aws-sdk-ec2 = "0.22.0"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["cargo", "derive"] }
command-manager = "0.0.1"
env_logger = "0.10.0"
log = "0.4.17"
path-clean = { version = "0.1.0", optional = false }
random-manager = "0.0.2"
tokio = { version = "1.23.0", features = ["full"] }
walkdir = { version = "2.3.2", optional = false }
